--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,8 @@ services:
 
   azure-vote-front:
     build: ./azure-vote
-    image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
+    #image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
+    image: azure-vote-front:v1
     container_name: azure-vote-front
     environment:
       REDIS: azure-vote-back
